_sass/_custom.sass
//For individual theme fixes. You know all about it.
// .site-logo
// 	max-width: 40rem

.footer
	color: #fff
	.attribution
		svg
			fill: #fff
	.socials
		svg
			fill: #fff
	a
		color: #fff

.newsletter
	background: darken($theme, 3%)




.fa-bars
	color: #fff

.navbar-andross
	.navbar-brand
		color: #fff
		// margin-top: 10px
#side-logo
	width: 90%
	margin: 0 auto

.client-testimonial
	margin-top: 10px

.testimonial-text
	font-style: italic

.testimonial-author
	color: #b40101
	margin-top: -20px

